TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> corpo
Rule 2     programa -> decl
Rule 3     programa -> decl corpo
Rule 4     entrada -> ID
Rule 5     entrada -> INT
Rule 6     decl -> COMENTARIO ABREPC STRING FECHAPC
Rule 7     decl -> VAR ID
Rule 8     decl -> VAR ID COM entrada
Rule 9     decl -> VAR ID COM op
Rule 10    decl -> LISTA ID
Rule 11    decl -> LISTA ID entrada
Rule 12    decl -> MATRIZ ID
Rule 13    decl -> MATRIZ ID entrada entrada
Rule 14    alterna -> ALTERNA ID COM entrada
Rule 15    alterna -> ALTERNA ID COM op
Rule 16    alterna -> ALTERNA ID entrada COM entrada
Rule 17    alterna -> ALTERNA ID entrada COM op
Rule 18    corpo -> proc
Rule 19    corpo -> corpo proc
Rule 20    proc -> alterna
Rule 21    op -> ExprArit
Rule 22    op -> ExprRel
Rule 23    op -> ExprLog
Rule 24    op -> Busca
Rule 25    ExprArit -> soma
Rule 26    ExprArit -> sub
Rule 27    ExprArit -> mult
Rule 28    ExprArit -> div
Rule 29    ExprArit -> exp
Rule 30    ExprArit -> resto
Rule 31    soma -> entrada SOMA entrada
Rule 32    sub -> entrada MENUS entrada
Rule 33    mult -> entrada SOMANBEZES entrada
Rule 34    div -> entrada DIBIDE entrada
Rule 35    exp -> entrada CHAPEU entrada
Rule 36    resto -> entrada SOBRAS entrada
Rule 37    Busca -> BUSCA ID entrada
Rule 38    Busca -> BUSCA ID entrada entrada
Rule 39    ExprRel -> maisGrande
Rule 40    ExprRel -> maisPiqueno
Rule 41    ExprRel -> gemeo
Rule 42    ExprRel -> maisGrandeOuGemeo
Rule 43    ExprRel -> maisPiquenoOuGemeo
Rule 44    ExprRel -> naoGemeo
Rule 45    maisGrande -> MAISGRANDE ABREPC entrada VIRG entrada FECHAPC
Rule 46    maisPiqueno -> MAISPIQUENO ABREPC entrada VIRG entrada FECHAPC
Rule 47    gemeo -> GEMEO ABREPC entrada VIRG entrada FECHAPC
Rule 48    maisGrandeOuGemeo -> MAISGRANDEOUGEMEO ABREPC entrada VIRG entrada FECHAPC
Rule 49    maisPiquenoOuGemeo -> MAISPIQUENOOUGEMEO ABREPC entrada VIRG entrada FECHAPC
Rule 50    naoGemeo -> NAOGEMEO ABREPC entrada VIRG entrada FECHAPC
Rule 51    ExprLog -> ie
Rule 52    ExprLog -> oue
Rule 53    ExprLog -> noum
Rule 54    ie -> entrada IE entrada
Rule 55    oue -> entrada OUE entrada
Rule 56    noum -> NOUM ABREPC entrada FECHAPC

Terminals, with rules where they appear

ABREPC               : 6 45 46 47 48 49 50 56
ALTERNA              : 14 15 16 17
BUSCA                : 37 38
CHAPEU               : 35
COM                  : 8 9 14 15 16 17
COMENTARIO           : 6
DIBIDE               : 34
FECHAPC              : 6 45 46 47 48 49 50 56
GEMEO                : 47
ID                   : 4 7 8 9 10 11 12 13 14 15 16 17 37 38
IE                   : 54
INT                  : 5
LISTA                : 10 11
MAISGRANDE           : 45
MAISGRANDEOUGEMEO    : 48
MAISPIQUENO          : 46
MAISPIQUENOOUGEMEO   : 49
MATRIZ               : 12 13
MENUS                : 32
NAOGEMEO             : 50
NOUM                 : 56
OUE                  : 55
SOBRAS               : 36
SOMA                 : 31
SOMANBEZES           : 33
STRING               : 6
VAR                  : 7 8 9
VIRG                 : 45 46 47 48 49 50
error                : 

Nonterminals, with rules where they appear

Busca                : 24
ExprArit             : 21
ExprLog              : 23
ExprRel              : 22
alterna              : 20
corpo                : 1 3 19
decl                 : 2 3
div                  : 28
entrada              : 8 11 13 13 14 16 16 17 31 31 32 32 33 33 34 34 35 35 36 36 37 38 38 45 45 46 46 47 47 48 48 49 49 50 50 54 54 55 55 56
exp                  : 29
gemeo                : 41
ie                   : 51
maisGrande           : 39
maisGrandeOuGemeo    : 42
maisPiqueno          : 40
maisPiquenoOuGemeo   : 43
mult                 : 27
naoGemeo             : 44
noum                 : 53
op                   : 9 15 17
oue                  : 52
proc                 : 18 19
programa             : 0
resto                : 30
soma                 : 25
sub                  : 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . corpo
    (2) programa -> . decl
    (3) programa -> . decl corpo
    (18) corpo -> . proc
    (19) corpo -> . corpo proc
    (6) decl -> . COMENTARIO ABREPC STRING FECHAPC
    (7) decl -> . VAR ID
    (8) decl -> . VAR ID COM entrada
    (9) decl -> . VAR ID COM op
    (10) decl -> . LISTA ID
    (11) decl -> . LISTA ID entrada
    (12) decl -> . MATRIZ ID
    (13) decl -> . MATRIZ ID entrada entrada
    (20) proc -> . alterna
    (14) alterna -> . ALTERNA ID COM entrada
    (15) alterna -> . ALTERNA ID COM op
    (16) alterna -> . ALTERNA ID entrada COM entrada
    (17) alterna -> . ALTERNA ID entrada COM op

    COMENTARIO      shift and go to state 5
    VAR             shift and go to state 6
    LISTA           shift and go to state 7
    MATRIZ          shift and go to state 8
    ALTERNA         shift and go to state 10

    programa                       shift and go to state 1
    corpo                          shift and go to state 2
    decl                           shift and go to state 3
    proc                           shift and go to state 4
    alterna                        shift and go to state 9

state 1

    (0) S' -> programa .



state 2

    (1) programa -> corpo .
    (19) corpo -> corpo . proc
    (20) proc -> . alterna
    (14) alterna -> . ALTERNA ID COM entrada
    (15) alterna -> . ALTERNA ID COM op
    (16) alterna -> . ALTERNA ID entrada COM entrada
    (17) alterna -> . ALTERNA ID entrada COM op

    $end            reduce using rule 1 (programa -> corpo .)
    ALTERNA         shift and go to state 10

    proc                           shift and go to state 11
    alterna                        shift and go to state 9

state 3

    (2) programa -> decl .
    (3) programa -> decl . corpo
    (18) corpo -> . proc
    (19) corpo -> . corpo proc
    (20) proc -> . alterna
    (14) alterna -> . ALTERNA ID COM entrada
    (15) alterna -> . ALTERNA ID COM op
    (16) alterna -> . ALTERNA ID entrada COM entrada
    (17) alterna -> . ALTERNA ID entrada COM op

    $end            reduce using rule 2 (programa -> decl .)
    ALTERNA         shift and go to state 10

    corpo                          shift and go to state 12
    proc                           shift and go to state 4
    alterna                        shift and go to state 9

state 4

    (18) corpo -> proc .

    ALTERNA         reduce using rule 18 (corpo -> proc .)
    $end            reduce using rule 18 (corpo -> proc .)


state 5

    (6) decl -> COMENTARIO . ABREPC STRING FECHAPC

    ABREPC          shift and go to state 13


state 6

    (7) decl -> VAR . ID
    (8) decl -> VAR . ID COM entrada
    (9) decl -> VAR . ID COM op

    ID              shift and go to state 14


state 7

    (10) decl -> LISTA . ID
    (11) decl -> LISTA . ID entrada

    ID              shift and go to state 15


state 8

    (12) decl -> MATRIZ . ID
    (13) decl -> MATRIZ . ID entrada entrada

    ID              shift and go to state 16


state 9

    (20) proc -> alterna .

    ALTERNA         reduce using rule 20 (proc -> alterna .)
    $end            reduce using rule 20 (proc -> alterna .)


state 10

    (14) alterna -> ALTERNA . ID COM entrada
    (15) alterna -> ALTERNA . ID COM op
    (16) alterna -> ALTERNA . ID entrada COM entrada
    (17) alterna -> ALTERNA . ID entrada COM op

    ID              shift and go to state 17


state 11

    (19) corpo -> corpo proc .

    ALTERNA         reduce using rule 19 (corpo -> corpo proc .)
    $end            reduce using rule 19 (corpo -> corpo proc .)


state 12

    (3) programa -> decl corpo .
    (19) corpo -> corpo . proc
    (20) proc -> . alterna
    (14) alterna -> . ALTERNA ID COM entrada
    (15) alterna -> . ALTERNA ID COM op
    (16) alterna -> . ALTERNA ID entrada COM entrada
    (17) alterna -> . ALTERNA ID entrada COM op

    $end            reduce using rule 3 (programa -> decl corpo .)
    ALTERNA         shift and go to state 10

    proc                           shift and go to state 11
    alterna                        shift and go to state 9

state 13

    (6) decl -> COMENTARIO ABREPC . STRING FECHAPC

    STRING          shift and go to state 18


state 14

    (7) decl -> VAR ID .
    (8) decl -> VAR ID . COM entrada
    (9) decl -> VAR ID . COM op

    ALTERNA         reduce using rule 7 (decl -> VAR ID .)
    $end            reduce using rule 7 (decl -> VAR ID .)
    COM             shift and go to state 19


state 15

    (10) decl -> LISTA ID .
    (11) decl -> LISTA ID . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ALTERNA         reduce using rule 10 (decl -> LISTA ID .)
    $end            reduce using rule 10 (decl -> LISTA ID .)
    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 21

state 16

    (12) decl -> MATRIZ ID .
    (13) decl -> MATRIZ ID . entrada entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ALTERNA         reduce using rule 12 (decl -> MATRIZ ID .)
    $end            reduce using rule 12 (decl -> MATRIZ ID .)
    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 23

state 17

    (14) alterna -> ALTERNA ID . COM entrada
    (15) alterna -> ALTERNA ID . COM op
    (16) alterna -> ALTERNA ID . entrada COM entrada
    (17) alterna -> ALTERNA ID . entrada COM op
    (4) entrada -> . ID
    (5) entrada -> . INT

    COM             shift and go to state 24
    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 25

state 18

    (6) decl -> COMENTARIO ABREPC STRING . FECHAPC

    FECHAPC         shift and go to state 26


state 19

    (8) decl -> VAR ID COM . entrada
    (9) decl -> VAR ID COM . op
    (4) entrada -> . ID
    (5) entrada -> . INT
    (21) op -> . ExprArit
    (22) op -> . ExprRel
    (23) op -> . ExprLog
    (24) op -> . Busca
    (25) ExprArit -> . soma
    (26) ExprArit -> . sub
    (27) ExprArit -> . mult
    (28) ExprArit -> . div
    (29) ExprArit -> . exp
    (30) ExprArit -> . resto
    (39) ExprRel -> . maisGrande
    (40) ExprRel -> . maisPiqueno
    (41) ExprRel -> . gemeo
    (42) ExprRel -> . maisGrandeOuGemeo
    (43) ExprRel -> . maisPiquenoOuGemeo
    (44) ExprRel -> . naoGemeo
    (51) ExprLog -> . ie
    (52) ExprLog -> . oue
    (53) ExprLog -> . noum
    (37) Busca -> . BUSCA ID entrada
    (38) Busca -> . BUSCA ID entrada entrada
    (31) soma -> . entrada SOMA entrada
    (32) sub -> . entrada MENUS entrada
    (33) mult -> . entrada SOMANBEZES entrada
    (34) div -> . entrada DIBIDE entrada
    (35) exp -> . entrada CHAPEU entrada
    (36) resto -> . entrada SOBRAS entrada
    (45) maisGrande -> . MAISGRANDE ABREPC entrada VIRG entrada FECHAPC
    (46) maisPiqueno -> . MAISPIQUENO ABREPC entrada VIRG entrada FECHAPC
    (47) gemeo -> . GEMEO ABREPC entrada VIRG entrada FECHAPC
    (48) maisGrandeOuGemeo -> . MAISGRANDEOUGEMEO ABREPC entrada VIRG entrada FECHAPC
    (49) maisPiquenoOuGemeo -> . MAISPIQUENOOUGEMEO ABREPC entrada VIRG entrada FECHAPC
    (50) naoGemeo -> . NAOGEMEO ABREPC entrada VIRG entrada FECHAPC
    (54) ie -> . entrada IE entrada
    (55) oue -> . entrada OUE entrada
    (56) noum -> . NOUM ABREPC entrada FECHAPC

    ID              shift and go to state 20
    INT             shift and go to state 22
    BUSCA           shift and go to state 48
    MAISGRANDE      shift and go to state 49
    MAISPIQUENO     shift and go to state 50
    GEMEO           shift and go to state 51
    MAISGRANDEOUGEMEO shift and go to state 52
    MAISPIQUENOOUGEMEO shift and go to state 53
    NAOGEMEO        shift and go to state 54
    NOUM            shift and go to state 55

    entrada                        shift and go to state 27
    op                             shift and go to state 28
    ExprArit                       shift and go to state 29
    ExprRel                        shift and go to state 30
    ExprLog                        shift and go to state 31
    Busca                          shift and go to state 32
    soma                           shift and go to state 33
    sub                            shift and go to state 34
    mult                           shift and go to state 35
    div                            shift and go to state 36
    exp                            shift and go to state 37
    resto                          shift and go to state 38
    maisGrande                     shift and go to state 39
    maisPiqueno                    shift and go to state 40
    gemeo                          shift and go to state 41
    maisGrandeOuGemeo              shift and go to state 42
    maisPiquenoOuGemeo             shift and go to state 43
    naoGemeo                       shift and go to state 44
    ie                             shift and go to state 45
    oue                            shift and go to state 46
    noum                           shift and go to state 47

state 20

    (4) entrada -> ID .

    ALTERNA         reduce using rule 4 (entrada -> ID .)
    $end            reduce using rule 4 (entrada -> ID .)
    ID              reduce using rule 4 (entrada -> ID .)
    INT             reduce using rule 4 (entrada -> ID .)
    COM             reduce using rule 4 (entrada -> ID .)
    SOMA            reduce using rule 4 (entrada -> ID .)
    MENUS           reduce using rule 4 (entrada -> ID .)
    SOMANBEZES      reduce using rule 4 (entrada -> ID .)
    DIBIDE          reduce using rule 4 (entrada -> ID .)
    CHAPEU          reduce using rule 4 (entrada -> ID .)
    SOBRAS          reduce using rule 4 (entrada -> ID .)
    IE              reduce using rule 4 (entrada -> ID .)
    OUE             reduce using rule 4 (entrada -> ID .)
    VIRG            reduce using rule 4 (entrada -> ID .)
    FECHAPC         reduce using rule 4 (entrada -> ID .)


state 21

    (11) decl -> LISTA ID entrada .

    ALTERNA         reduce using rule 11 (decl -> LISTA ID entrada .)
    $end            reduce using rule 11 (decl -> LISTA ID entrada .)


state 22

    (5) entrada -> INT .

    ALTERNA         reduce using rule 5 (entrada -> INT .)
    $end            reduce using rule 5 (entrada -> INT .)
    ID              reduce using rule 5 (entrada -> INT .)
    INT             reduce using rule 5 (entrada -> INT .)
    COM             reduce using rule 5 (entrada -> INT .)
    SOMA            reduce using rule 5 (entrada -> INT .)
    MENUS           reduce using rule 5 (entrada -> INT .)
    SOMANBEZES      reduce using rule 5 (entrada -> INT .)
    DIBIDE          reduce using rule 5 (entrada -> INT .)
    CHAPEU          reduce using rule 5 (entrada -> INT .)
    SOBRAS          reduce using rule 5 (entrada -> INT .)
    IE              reduce using rule 5 (entrada -> INT .)
    OUE             reduce using rule 5 (entrada -> INT .)
    VIRG            reduce using rule 5 (entrada -> INT .)
    FECHAPC         reduce using rule 5 (entrada -> INT .)


state 23

    (13) decl -> MATRIZ ID entrada . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 56

state 24

    (14) alterna -> ALTERNA ID COM . entrada
    (15) alterna -> ALTERNA ID COM . op
    (4) entrada -> . ID
    (5) entrada -> . INT
    (21) op -> . ExprArit
    (22) op -> . ExprRel
    (23) op -> . ExprLog
    (24) op -> . Busca
    (25) ExprArit -> . soma
    (26) ExprArit -> . sub
    (27) ExprArit -> . mult
    (28) ExprArit -> . div
    (29) ExprArit -> . exp
    (30) ExprArit -> . resto
    (39) ExprRel -> . maisGrande
    (40) ExprRel -> . maisPiqueno
    (41) ExprRel -> . gemeo
    (42) ExprRel -> . maisGrandeOuGemeo
    (43) ExprRel -> . maisPiquenoOuGemeo
    (44) ExprRel -> . naoGemeo
    (51) ExprLog -> . ie
    (52) ExprLog -> . oue
    (53) ExprLog -> . noum
    (37) Busca -> . BUSCA ID entrada
    (38) Busca -> . BUSCA ID entrada entrada
    (31) soma -> . entrada SOMA entrada
    (32) sub -> . entrada MENUS entrada
    (33) mult -> . entrada SOMANBEZES entrada
    (34) div -> . entrada DIBIDE entrada
    (35) exp -> . entrada CHAPEU entrada
    (36) resto -> . entrada SOBRAS entrada
    (45) maisGrande -> . MAISGRANDE ABREPC entrada VIRG entrada FECHAPC
    (46) maisPiqueno -> . MAISPIQUENO ABREPC entrada VIRG entrada FECHAPC
    (47) gemeo -> . GEMEO ABREPC entrada VIRG entrada FECHAPC
    (48) maisGrandeOuGemeo -> . MAISGRANDEOUGEMEO ABREPC entrada VIRG entrada FECHAPC
    (49) maisPiquenoOuGemeo -> . MAISPIQUENOOUGEMEO ABREPC entrada VIRG entrada FECHAPC
    (50) naoGemeo -> . NAOGEMEO ABREPC entrada VIRG entrada FECHAPC
    (54) ie -> . entrada IE entrada
    (55) oue -> . entrada OUE entrada
    (56) noum -> . NOUM ABREPC entrada FECHAPC

    ID              shift and go to state 20
    INT             shift and go to state 22
    BUSCA           shift and go to state 48
    MAISGRANDE      shift and go to state 49
    MAISPIQUENO     shift and go to state 50
    GEMEO           shift and go to state 51
    MAISGRANDEOUGEMEO shift and go to state 52
    MAISPIQUENOOUGEMEO shift and go to state 53
    NAOGEMEO        shift and go to state 54
    NOUM            shift and go to state 55

    entrada                        shift and go to state 57
    op                             shift and go to state 58
    ExprArit                       shift and go to state 29
    ExprRel                        shift and go to state 30
    ExprLog                        shift and go to state 31
    Busca                          shift and go to state 32
    soma                           shift and go to state 33
    sub                            shift and go to state 34
    mult                           shift and go to state 35
    div                            shift and go to state 36
    exp                            shift and go to state 37
    resto                          shift and go to state 38
    maisGrande                     shift and go to state 39
    maisPiqueno                    shift and go to state 40
    gemeo                          shift and go to state 41
    maisGrandeOuGemeo              shift and go to state 42
    maisPiquenoOuGemeo             shift and go to state 43
    naoGemeo                       shift and go to state 44
    ie                             shift and go to state 45
    oue                            shift and go to state 46
    noum                           shift and go to state 47

state 25

    (16) alterna -> ALTERNA ID entrada . COM entrada
    (17) alterna -> ALTERNA ID entrada . COM op

    COM             shift and go to state 59


state 26

    (6) decl -> COMENTARIO ABREPC STRING FECHAPC .

    ALTERNA         reduce using rule 6 (decl -> COMENTARIO ABREPC STRING FECHAPC .)
    $end            reduce using rule 6 (decl -> COMENTARIO ABREPC STRING FECHAPC .)


state 27

    (8) decl -> VAR ID COM entrada .
    (31) soma -> entrada . SOMA entrada
    (32) sub -> entrada . MENUS entrada
    (33) mult -> entrada . SOMANBEZES entrada
    (34) div -> entrada . DIBIDE entrada
    (35) exp -> entrada . CHAPEU entrada
    (36) resto -> entrada . SOBRAS entrada
    (54) ie -> entrada . IE entrada
    (55) oue -> entrada . OUE entrada

    ALTERNA         reduce using rule 8 (decl -> VAR ID COM entrada .)
    $end            reduce using rule 8 (decl -> VAR ID COM entrada .)
    SOMA            shift and go to state 60
    MENUS           shift and go to state 61
    SOMANBEZES      shift and go to state 62
    DIBIDE          shift and go to state 63
    CHAPEU          shift and go to state 64
    SOBRAS          shift and go to state 65
    IE              shift and go to state 66
    OUE             shift and go to state 67


state 28

    (9) decl -> VAR ID COM op .

    ALTERNA         reduce using rule 9 (decl -> VAR ID COM op .)
    $end            reduce using rule 9 (decl -> VAR ID COM op .)


state 29

    (21) op -> ExprArit .

    ALTERNA         reduce using rule 21 (op -> ExprArit .)
    $end            reduce using rule 21 (op -> ExprArit .)


state 30

    (22) op -> ExprRel .

    ALTERNA         reduce using rule 22 (op -> ExprRel .)
    $end            reduce using rule 22 (op -> ExprRel .)


state 31

    (23) op -> ExprLog .

    ALTERNA         reduce using rule 23 (op -> ExprLog .)
    $end            reduce using rule 23 (op -> ExprLog .)


state 32

    (24) op -> Busca .

    ALTERNA         reduce using rule 24 (op -> Busca .)
    $end            reduce using rule 24 (op -> Busca .)


state 33

    (25) ExprArit -> soma .

    ALTERNA         reduce using rule 25 (ExprArit -> soma .)
    $end            reduce using rule 25 (ExprArit -> soma .)


state 34

    (26) ExprArit -> sub .

    ALTERNA         reduce using rule 26 (ExprArit -> sub .)
    $end            reduce using rule 26 (ExprArit -> sub .)


state 35

    (27) ExprArit -> mult .

    ALTERNA         reduce using rule 27 (ExprArit -> mult .)
    $end            reduce using rule 27 (ExprArit -> mult .)


state 36

    (28) ExprArit -> div .

    ALTERNA         reduce using rule 28 (ExprArit -> div .)
    $end            reduce using rule 28 (ExprArit -> div .)


state 37

    (29) ExprArit -> exp .

    ALTERNA         reduce using rule 29 (ExprArit -> exp .)
    $end            reduce using rule 29 (ExprArit -> exp .)


state 38

    (30) ExprArit -> resto .

    ALTERNA         reduce using rule 30 (ExprArit -> resto .)
    $end            reduce using rule 30 (ExprArit -> resto .)


state 39

    (39) ExprRel -> maisGrande .

    ALTERNA         reduce using rule 39 (ExprRel -> maisGrande .)
    $end            reduce using rule 39 (ExprRel -> maisGrande .)


state 40

    (40) ExprRel -> maisPiqueno .

    ALTERNA         reduce using rule 40 (ExprRel -> maisPiqueno .)
    $end            reduce using rule 40 (ExprRel -> maisPiqueno .)


state 41

    (41) ExprRel -> gemeo .

    ALTERNA         reduce using rule 41 (ExprRel -> gemeo .)
    $end            reduce using rule 41 (ExprRel -> gemeo .)


state 42

    (42) ExprRel -> maisGrandeOuGemeo .

    ALTERNA         reduce using rule 42 (ExprRel -> maisGrandeOuGemeo .)
    $end            reduce using rule 42 (ExprRel -> maisGrandeOuGemeo .)


state 43

    (43) ExprRel -> maisPiquenoOuGemeo .

    ALTERNA         reduce using rule 43 (ExprRel -> maisPiquenoOuGemeo .)
    $end            reduce using rule 43 (ExprRel -> maisPiquenoOuGemeo .)


state 44

    (44) ExprRel -> naoGemeo .

    ALTERNA         reduce using rule 44 (ExprRel -> naoGemeo .)
    $end            reduce using rule 44 (ExprRel -> naoGemeo .)


state 45

    (51) ExprLog -> ie .

    ALTERNA         reduce using rule 51 (ExprLog -> ie .)
    $end            reduce using rule 51 (ExprLog -> ie .)


state 46

    (52) ExprLog -> oue .

    ALTERNA         reduce using rule 52 (ExprLog -> oue .)
    $end            reduce using rule 52 (ExprLog -> oue .)


state 47

    (53) ExprLog -> noum .

    ALTERNA         reduce using rule 53 (ExprLog -> noum .)
    $end            reduce using rule 53 (ExprLog -> noum .)


state 48

    (37) Busca -> BUSCA . ID entrada
    (38) Busca -> BUSCA . ID entrada entrada

    ID              shift and go to state 68


state 49

    (45) maisGrande -> MAISGRANDE . ABREPC entrada VIRG entrada FECHAPC

    ABREPC          shift and go to state 69


state 50

    (46) maisPiqueno -> MAISPIQUENO . ABREPC entrada VIRG entrada FECHAPC

    ABREPC          shift and go to state 70


state 51

    (47) gemeo -> GEMEO . ABREPC entrada VIRG entrada FECHAPC

    ABREPC          shift and go to state 71


state 52

    (48) maisGrandeOuGemeo -> MAISGRANDEOUGEMEO . ABREPC entrada VIRG entrada FECHAPC

    ABREPC          shift and go to state 72


state 53

    (49) maisPiquenoOuGemeo -> MAISPIQUENOOUGEMEO . ABREPC entrada VIRG entrada FECHAPC

    ABREPC          shift and go to state 73


state 54

    (50) naoGemeo -> NAOGEMEO . ABREPC entrada VIRG entrada FECHAPC

    ABREPC          shift and go to state 74


state 55

    (56) noum -> NOUM . ABREPC entrada FECHAPC

    ABREPC          shift and go to state 75


state 56

    (13) decl -> MATRIZ ID entrada entrada .

    ALTERNA         reduce using rule 13 (decl -> MATRIZ ID entrada entrada .)
    $end            reduce using rule 13 (decl -> MATRIZ ID entrada entrada .)


state 57

    (14) alterna -> ALTERNA ID COM entrada .
    (31) soma -> entrada . SOMA entrada
    (32) sub -> entrada . MENUS entrada
    (33) mult -> entrada . SOMANBEZES entrada
    (34) div -> entrada . DIBIDE entrada
    (35) exp -> entrada . CHAPEU entrada
    (36) resto -> entrada . SOBRAS entrada
    (54) ie -> entrada . IE entrada
    (55) oue -> entrada . OUE entrada

    ALTERNA         reduce using rule 14 (alterna -> ALTERNA ID COM entrada .)
    $end            reduce using rule 14 (alterna -> ALTERNA ID COM entrada .)
    SOMA            shift and go to state 60
    MENUS           shift and go to state 61
    SOMANBEZES      shift and go to state 62
    DIBIDE          shift and go to state 63
    CHAPEU          shift and go to state 64
    SOBRAS          shift and go to state 65
    IE              shift and go to state 66
    OUE             shift and go to state 67


state 58

    (15) alterna -> ALTERNA ID COM op .

    ALTERNA         reduce using rule 15 (alterna -> ALTERNA ID COM op .)
    $end            reduce using rule 15 (alterna -> ALTERNA ID COM op .)


state 59

    (16) alterna -> ALTERNA ID entrada COM . entrada
    (17) alterna -> ALTERNA ID entrada COM . op
    (4) entrada -> . ID
    (5) entrada -> . INT
    (21) op -> . ExprArit
    (22) op -> . ExprRel
    (23) op -> . ExprLog
    (24) op -> . Busca
    (25) ExprArit -> . soma
    (26) ExprArit -> . sub
    (27) ExprArit -> . mult
    (28) ExprArit -> . div
    (29) ExprArit -> . exp
    (30) ExprArit -> . resto
    (39) ExprRel -> . maisGrande
    (40) ExprRel -> . maisPiqueno
    (41) ExprRel -> . gemeo
    (42) ExprRel -> . maisGrandeOuGemeo
    (43) ExprRel -> . maisPiquenoOuGemeo
    (44) ExprRel -> . naoGemeo
    (51) ExprLog -> . ie
    (52) ExprLog -> . oue
    (53) ExprLog -> . noum
    (37) Busca -> . BUSCA ID entrada
    (38) Busca -> . BUSCA ID entrada entrada
    (31) soma -> . entrada SOMA entrada
    (32) sub -> . entrada MENUS entrada
    (33) mult -> . entrada SOMANBEZES entrada
    (34) div -> . entrada DIBIDE entrada
    (35) exp -> . entrada CHAPEU entrada
    (36) resto -> . entrada SOBRAS entrada
    (45) maisGrande -> . MAISGRANDE ABREPC entrada VIRG entrada FECHAPC
    (46) maisPiqueno -> . MAISPIQUENO ABREPC entrada VIRG entrada FECHAPC
    (47) gemeo -> . GEMEO ABREPC entrada VIRG entrada FECHAPC
    (48) maisGrandeOuGemeo -> . MAISGRANDEOUGEMEO ABREPC entrada VIRG entrada FECHAPC
    (49) maisPiquenoOuGemeo -> . MAISPIQUENOOUGEMEO ABREPC entrada VIRG entrada FECHAPC
    (50) naoGemeo -> . NAOGEMEO ABREPC entrada VIRG entrada FECHAPC
    (54) ie -> . entrada IE entrada
    (55) oue -> . entrada OUE entrada
    (56) noum -> . NOUM ABREPC entrada FECHAPC

    ID              shift and go to state 20
    INT             shift and go to state 22
    BUSCA           shift and go to state 48
    MAISGRANDE      shift and go to state 49
    MAISPIQUENO     shift and go to state 50
    GEMEO           shift and go to state 51
    MAISGRANDEOUGEMEO shift and go to state 52
    MAISPIQUENOOUGEMEO shift and go to state 53
    NAOGEMEO        shift and go to state 54
    NOUM            shift and go to state 55

    entrada                        shift and go to state 76
    op                             shift and go to state 77
    ExprArit                       shift and go to state 29
    ExprRel                        shift and go to state 30
    ExprLog                        shift and go to state 31
    Busca                          shift and go to state 32
    soma                           shift and go to state 33
    sub                            shift and go to state 34
    mult                           shift and go to state 35
    div                            shift and go to state 36
    exp                            shift and go to state 37
    resto                          shift and go to state 38
    maisGrande                     shift and go to state 39
    maisPiqueno                    shift and go to state 40
    gemeo                          shift and go to state 41
    maisGrandeOuGemeo              shift and go to state 42
    maisPiquenoOuGemeo             shift and go to state 43
    naoGemeo                       shift and go to state 44
    ie                             shift and go to state 45
    oue                            shift and go to state 46
    noum                           shift and go to state 47

state 60

    (31) soma -> entrada SOMA . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 78

state 61

    (32) sub -> entrada MENUS . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 79

state 62

    (33) mult -> entrada SOMANBEZES . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 80

state 63

    (34) div -> entrada DIBIDE . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 81

state 64

    (35) exp -> entrada CHAPEU . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 82

state 65

    (36) resto -> entrada SOBRAS . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 83

state 66

    (54) ie -> entrada IE . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 84

state 67

    (55) oue -> entrada OUE . entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 85

state 68

    (37) Busca -> BUSCA ID . entrada
    (38) Busca -> BUSCA ID . entrada entrada
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 86

state 69

    (45) maisGrande -> MAISGRANDE ABREPC . entrada VIRG entrada FECHAPC
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 87

state 70

    (46) maisPiqueno -> MAISPIQUENO ABREPC . entrada VIRG entrada FECHAPC
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 88

state 71

    (47) gemeo -> GEMEO ABREPC . entrada VIRG entrada FECHAPC
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 89

state 72

    (48) maisGrandeOuGemeo -> MAISGRANDEOUGEMEO ABREPC . entrada VIRG entrada FECHAPC
    (4) entrada -> . ID
    (5) entrada -> . INT

    ID              shift and go to state 20
    INT             shift and go to state 22

    entrada                        shift and go to state 90

state 73
